<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.codeforcoffee.yeoldegeometryapp.AreaActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_radius"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/radius_txt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_btn_calculate"
        android:id="@+id/btn_calc_area"
        android:layout_below="@+id/text_radius"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radius_placeholder"
        android:id="@+id/area_txtView"
        android:layout_below="@+id/btn_calc_area"
        android:layout_alignLeft="@+id/btn_calc_area"
        android:layout_alignStart="@+id/btn_calc_area"
        android:layout_marginTop="70dp"
        android:textAppearance="@android:style/TextAppearance.Medium" />

</RelativeLayout>
